--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -10,12 +10,18 @@
   "author": "bellho",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@loadable/component": "^5.15.2",
     "cross-env": "^7.0.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
+    "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-env": "^7.13.8",
     "@babel/preset-react": "^7.12.13",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
