--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -10,6 +10,7 @@
   "author": "bellho",
   "license": "MIT",
   "dependencies": {
+    "@emotion/babel-plugin": "^11.9.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@loadable/component": "^5.15.2",
