--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -16,6 +16,7 @@
     "@loadable/component": "^5.15.2",
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
+    "gravatar": "^1.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^6.3.0",
