--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.5",
     "swr": "^1.3.0"
   },
   "devDependencies": {
