--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -19,6 +19,7 @@
     "gravatar": "^1.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mentions": "^4.4.7",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.5",
