--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@loadable/component": "^5.15.2",
+    "autosize": "^5.0.1",
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "gravatar": "^1.8.2",
