--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.5",
+    "socket.io-client": "^2.5.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
@@ -37,7 +38,12 @@
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.30.1",
     "prettier": "^2.2.1",
     "react-refresh": "^0.10.0",
     "style-loader": "^3.2.1",
