--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -17,8 +17,10 @@
     "autosize": "^5.0.1",
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.4",
     "gravatar": "^1.8.2",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-mentions": "^4.4.7",
     "react-router": "^6.3.0",
