--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -26,6 +26,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.5",
+    "regexify-string": "^1.0.19",
     "socket.io-client": "^2.5.0",
     "swr": "^1.3.0"
   },
