--- a/sleact/alecture/package.json
+++ b/sleact/alecture/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env webpack serve --env development",
-    "build": "cross-env webpack"
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "author": "bellho",
   "license": "MIT",
@@ -28,7 +28,8 @@
     "react-toastify": "^9.0.5",
     "regexify-string": "^1.0.19",
     "socket.io-client": "^2.5.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
